# yaledger

./: .gitignore  Accounts.hs  CSV.hs  CUB.yaml  CmdLine.hs  Correspondence.hs  Currencies.hs  Dates.hs  Exceptions.hs  INSTALL  Kernel.hs  Lists.hs  Makefile  Monad.hs  Parser.hs  Processor.hs  Queries.hs  README.md  README.ru  TODO  Test.hs  Tests.hs  TopLevel.hs  Transactions.hs  Tree.hs  Types.hs  Unicode.hs  benchmark.hs  install.sh  test.accounts  test.map  test.yaledger  test2.yaledger  yaledger-tests.hs  yaledger.cabal  yaledger.hs
YaLedger/: Attributes.hs  Config.hs  Correspondence.hs  Exceptions.hs  Installer.hs  Kernel.hs  Logger.hs  Main.hs  Monad.hs  Output.hs  Parser.hs  Pretty.hs  Processor.hs  Queue.hs  Rules.hs  Strings.hs  Templates.hs  Tree.hs  Types.hs
YaLedger/Config/: CommonInstances.hs
YaLedger/Exceptions/: Utils.hs
YaLedger/Kernel/: Balances.hs  Classification.hs  Common.hs  Correspondence.hs  Holds.hs  Monad.hs  Query.hs  Queue.hs  Rates.hs  STM.hs  Types.hs
YaLedger/Logger/: Loggers.hs  STM.hs  TH.hs
YaLedger/Output/: ANSI.hs  ASCII.hs  CSV.hs  Formatted.hs  HTML.hs  Messages.hs  Pretty.hs  Strings.hs  Tables.hs
YaLedger/Parser/: CBR.hs  CSV.hs  CoA.hs  Common.hs  Currencies.hs  HTML.hs  HTTP.hs  Map.hs  Plan.hs  Tables.hs  Test.hs  Transactions.hs
YaLedger/Processor/: DateIndex.hs  Duplicates.hs  Queue.hs  Rules.hs  Templates.hs
YaLedger/Reports/: API.hs  Balance.hs  Cat.hs  CoA.hs  Common.hs  Details.hs  Flow.hs  Holds.hs  IncomeStatement.hs  Ledger.hs  Plan.hs  Postings.hs  Rates.hs  Registry.hs  Saldo.hs  Stats.hs  Test.hs  Turnovers.hs
YaLedger/Tests/: Correspondence.hs  Instances.hs  Main.hs
YaLedger/Types/: Attributes.hs  Common.hs  Map.hs  (+7 more)
configs/: default.accounts  yaledger.yaml
docs/: 0110.page  0120.page  0130.md  Accounting.md  Accounts.md  Accounts.page  AccountsMap.md  AccountsReport.page  Algo.md  Algo.page  Attributes.md  Attributes.page  BalanceChecks.md  Balances.page  CBRRates.page  CSV.md  CardExamples.md  Cat.md  Charts.md  Charts.page  CmdLine.md  Config.md  Currencies.md  DebitRedirect.page  Deduplication.md  Details.page  Files.md  FlowReport.md  FutureExpenses.md  FutureExpenses.page  HTML.md  HTML.page  Holds.md  Holds.page  HoldsReport.page  INSTALL.page  IncomeStatement.page  Periodic.page  Postings.page  README.md  (+12 more)
examples/: benchmark.yaledger  benchmark.yaml  cbr.yaml  csv.yaml  currencies.yaml  default.accounts  default.map  default.yaledger  html.yaml  implicit.yaledger  rates.yaledger  test.map  testConfig.yaml  tests.accounts  tests.map  tests.yaledger  tests.yaml  yaledger.yaml
tests/: correspondence.txt  yaledger-tests.cabal  yaledger-tests.hs
tests/YaLedger/Tests/: Correspondence.hs  Instances.hs  Main.hs
(+56 files in other folders)
