
name: yaledger-tests
version: 0.1.0.0
synopsis: Tests for YaLedger
homepage:            http://redmine.iportnov.ru/projects/yaledger
license:             BSD3
author:              IlyaPortnov
maintainer:          portnov84@rambler.ru
build-type:          Simple
cabal-version:       >=1.8

executable yaledger-tests
  main-is: yaledger-tests.hs

  build-depends: base >= 4 && < 5, mtl >= 2.1,
                 transformers >= 0.3,
                 control-monad-exception ==0.10.*,
                 containers >= 0.4,
                 monadloc ==0.7.*,
                 QuickCheck >= 2.5.1,
                 test-framework >= 0.6.1,
                 test-framework-quickcheck2 >= 0.2.12,
                 dates >= 0.2.1.0,
                 Decimal >= 0.2.3,
                 yaledger == 0.1.0.0
